--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,5 +5,6 @@
     "empty_note_placeholder": "Tap to edit...",
     "add": "Add",
     "search_bar_hint_text": "Search your notes...",
-    "no_notes": "No notes"
+    "no_notes": "No notes",
+    "no_matches": "No matches"
 }
