--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -5,5 +5,6 @@
     "empty_note_placeholder": "点击添加内容...",
     "add": "添加",
     "search_bar_hint_text": "搜索你的笔记...",
-    "no_notes": "无笔记"
+    "no_notes": "无笔记",
+    "no_matches": "无匹配项"
 }
